--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ CLOUDINARY_API_KEY= "847676148922879"
 CLOUDINARY_API_SECRET="nniBkIfV1__dCpwQKVMRdJruiR8"
 CLOUDINARY_NAME="dpawok5hk"
 JWT_SECRET="ecommerce"
+ADMIN_EMAIL="admin@gmail.com"
+ADMIN_PASSWORD="qwerty123"
